# Tracky

./: README.md  com.github.Elnee.Tracky.json  meson.build
data/: com.github.Elnee.Tracky.appdata.xml.in  com.github.Elnee.Tracky.desktop.in  com.github.Elnee.Tracky.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: app.vala  config.vala  database.vala  helper.vala  main.vala  meson.build  tracky.gresource.xml  window.ui
src/models/: mainmodel.vala  task.vala  taskgoal.vala
src/views/: window.vala
src/views/ui/: newtask-window.ui~  style.css  task.ui~  taskwidget.ui  taskwidget.ui~  window.ui  window.ui~
src/views/widgets/: taskgoalwidget.vala  taskwidget.vala
